fixing bug causing a horizontal scrollbar once vertical scrollbar appears

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -4,6 +4,9 @@ body {
   min-width: 100vw;
   margin: 0 0;
 }
+body {
+  overflow-x: hidden;
+}
 
 .app {
   min-height: 100vh;
